--- a/Hussein-Talal/style.css
+++ b/Hussein-Talal/style.css
@@ -1,10 +1,17 @@
+:root {
+    --light-bg-color: #fcfbfe;
+    /* --light-shadow-color: #111; */
+    --dark-bg-color:#1A191E;
+    --dark-shadow-color:#111;
+    --lighter-dark-bg-color: #27262b;
+}
+
 * {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
     font-family: 'Roboto', sans-serif;
 }
-
 
 /* span {
     display: block;
@@ -24,8 +31,8 @@ header h4 {
 .todo-items {
     list-style: none;
 }
-#msg {
-    color: red;
+section.todo-list{
+    margin-bottom: 10rem ;
 }
 
 .todo-items span {
@@ -33,7 +40,7 @@ header h4 {
 }
 
 .secondary {
-    margin-top: 8px
+    margin-top: 9px
 }
 
 .secondary-content {
