--- a/Hussein-Talal/style.css
+++ b/Hussein-Talal/style.css
@@ -62,7 +62,7 @@ body {
     background-color: white;
     box-shadow:0 0 1rem -0.25rem var(--box-shadow);
     padding: 1rem;
-    margin-top: 3rem;
+    margin-top: 2rem;
 }
 
 /* dark mode styling */
@@ -140,4 +140,37 @@ span.priority {
     font-size: .8rem !important;
     width: auto;
     color: white !important;
+}
+
+/*dark mode toggler*/
+.dark-toggler{
+    margin-top: 2rem !important;
+}
+
+.label {
+	background-color: #111;
+	border-radius: 50px;
+	cursor: pointer;
+	display: flex;
+	align-items: center;
+	justify-content: space-between;
+	padding: 5px;
+	position: relative;
+	height: 26px;
+	width: 50px;
+	transform: scale(1);
+}
+.label .ball {
+	background-color: #fff;
+	border-radius: 50%;
+	position: absolute;
+	top: 2px;
+	left: 2px;
+	height: 22px;
+	width: 22px;
+	transform: translateX(0px);
+	transition: transform 0.2s linear;
+}
+.checkbox:checked + .label .ball {
+	transform: translateX(24px);
 }
