--- a/Hussein-Talal/style.css
+++ b/Hussein-Talal/style.css
@@ -6,11 +6,11 @@
     --element1: #111111;
     --element2: #222222;
     --element3: #333333;
-    --elementInverse: #eee;
-    --primary: #01408e;
-    --secondary: #3c5d5c;
-    --tertiary: #fff7d6;
     --box-shadow: rgba(0, 0, 0, 0.1);
+    --primary:#673ab7;
+    --btn-color:#d32f2f;
+    --toggle-color:#111;
+    --ball-color:white;
   }
   
 :root[color-mode="dark"] {
@@ -20,11 +20,11 @@
     --element1: #eeeeee;
     --element2: #dddddd;
     --element3: #cccccc;
-    --elementInverse: #111;
-    --primary: #8fceff;
-    --secondary: #72faca;
-    --tertiary: #eee8a9;
     --box-shadow:rgba(0, 0, 0, 0.2);
+    --primary:#9575cd;
+    --btn-color:#ef5350;
+    --toggle-color:#fff;
+    --ball-color:black;
   }
 
 
@@ -42,6 +42,7 @@ html {
 body {
     background-color: var(--surface1) !important;
     color: var(--element1);
+    transition: all .4s ease-in-out;
 }
 
 
@@ -52,6 +53,7 @@ body {
     margin-left: 0;
     margin-right: 0;
     color: var(--element2);
+    transition: all .4s ease-in-out !important;
 }
 
 .container:nth-child(2) {
@@ -60,37 +62,40 @@ body {
     padding: 1rem;
     margin-top: 2rem;
     color: var(--element2);
+    transition: all .4s ease-in-out;
 }
-
 input {
     color: var(--element2);
+    transition: all .4s ease-in-out;
+}
+header nav {
+    background-color: var(--primary) ;
+    transition: all .4s ease-in-out;
+}
+body .btn {
+    background-color: var(--btn-color);
+    transition: all .4s ease-in-out;
+}
+body .btn:hover {
+    background-color: var(--btn-color);
+
+}
+body .dropdown-content {
+    background-color: var(--surface3) ;
+}
+body .secondary-content {
+    color: var(--btn-color);
+    transition: all .4s ease-in-out;
+}
+.select-wrapper span {
+    color: var(--element3) !important;
+    transition: all .4s ease-in-out;
+}
+.select-wrapper {
+    transition: all .4s ease-in-out;
 }
 
-
-/* dark mode styling */
-/* body.dark-mode  {
-    background-color: var(--dark-bg-color);
-    color: white;
-}
-.dark-mode .container .todo-items .collection-item {
-    background-color: var(--lighter-dark-bg-color);
-    box-shadow:0 0 1rem -0.25rem rgba(255, 255, 255, 0.082);
-    color: white;
-}
-.dark-mode .container:nth-child(1) {
-    background-color: var(--lighter-dark-bg-color);
-    box-shadow:0 0 1rem -0.25rem rgba(255, 255, 255, 0.082);
-    color: white;
-}
-.dark-mode input {
-    color: white;
-}
-
-.dark-mode .select-dropdown {
-    background-color:var(--lighter-dark-bg-color) !important ;
-    color: white !important;
-} */
-
+/*general styling*/
 header h4 {
     font-size: 1rem;
     margin-top:.8rem;
@@ -150,7 +155,7 @@ span.priority {
 }
 
 .label {
-	background-color: #111;
+	background-color: var(--toggle-color);
 	border-radius: 50px;
 	cursor: pointer;
 	display: flex;
@@ -160,10 +165,12 @@ span.priority {
 	position: relative;
 	height: 26px;
 	width: 50px;
-	transform: scale(1);
+    transform: scale(1);
+    box-shadow:0 0 1rem -0.25rem var(--box-shadow);
+    transition: all .2s ease-in-out; 
 }
 .label .ball {
-	background-color: #fff;
+	background-color: var(--ball-color);
 	border-radius: 50%;
 	position: absolute;
 	top: 2px;
